<resources>
    <string name="app_name">Kontaktersy</string>
    <string name="dodaj_kontakt">Dodaj</string>
    <string name="dodaj_kontakt_imie">Imie</string>
    <string name="dodaj_kontakt_nazwisko">Nazwisko</string>
    <string name="dodaj_kontakt_telefon">Telefon</string>
    <string name="Listakontaktow">Kontakty</string>
    <string name="menudodajkontakt">Dodaj kontakt</string>
    <string name="Wybieranie">Wybieranie</string>
    <string name="dodaj_kontakt_e_mail">E-Mail</string>
    <string name="szukaj">Szukaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telefon">Telefon:</string>
    <string name="kontakt">KONTAKT</string>
    <string name="e_mail">E-Mail:</string>
    <string name="nazwa">Nazwa:</string>
</resources>