<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.podgladKontaktu.podgladKontaktu">


    <TextView
        android:id="@+id/telefonp"
        android:layout_width="276dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/okragle2"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazwap"
        tools:text="666666666" />

    <TextView
        android:id="@+id/nazwap"
        android:layout_width="276dp"
        android:layout_height="55dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/okragle2"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tony Monke" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/okragle2"
        android:focusable="false"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:text="@string/nazwa"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/nazwap"
        app:layout_constraintTop_toTopOf="@+id/nazwap" />

    <TextView
        android:id="@+id/Mail"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/okragle2"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonp"
        tools:text="tony@tony.com" />

    <TextView
        android:id="@+id/text33"
        android:layout_width="61dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/okragle2"
        android:focusable="false"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/Mail"
        app:layout_constraintTop_toBottomOf="@+id/text22" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="345dp"
        android:layout_height="76dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/okragle2"
        android:focusable="false"
        android:text="@string/kontakt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text22"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/okragle2"
        android:focusable="false"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:text="@string/telefon"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/telefonp"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <ImageButton
        android:id="@+id/dzwon"
        android:layout_width="47dp"
        android:layout_height="55dp"
        android:background="@drawable/okragle2"
        android:src="@android:drawable/stat_sys_phone_call"
        app:layout_constraintStart_toEndOf="@+id/telefonp"
        app:layout_constraintTop_toTopOf="@+id/telefonp" />


</androidx.constraintlayout.widget.ConstraintLayout>